--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body{
-    background-image: url("/images/bg.jpg") ;
+    background-image: url("https://images.unsplash.com/photo-1485161467312-b176cc64dacc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80") ;
     background-size: 100%;
     background-repeat: no-repeat;
     font-family: var(--myfont);
